cabal-version:      >=1.10
name:               mystical-record
version:            0.1.0.0
license-file:       LICENSE
maintainer:         djanatyn@gmail.com
author:             Jonathan Strickland
build-type:         Simple
extra-source-files: CHANGELOG.md

executable mystical-record
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
                  base >=4.14 && <4.15,
                  bytestring -any,
                  http-client -any,
                  http-media -any,
                  servant -any,
                  servant-client -any,
                  servant-client-core -any,
                  text -any, hxt -any, hxt-css -any, selda -any, selda-sqlite -any
