cabal-version:      >=1.10
name:               mystical-record
version:            0.1.0.0
license-file:       LICENSE
maintainer:         djanatyn@gmail.com
author:             Jonathan Strickland
build-type:         Simple
extra-source-files: CHANGELOG.md

executable mystical-record
    main-is:          Main.hs
    default-language: Haskell2010
    build-depends:
      -- using relude
      base >=4.14 && <4.15,
      relude,
      -- mimetypes for archives.php
      http-client,
      http-media,
      -- archive API
      servant,
      servant-client,
      servant-client-core,
      -- parsing responses
      hxt,
      hxt-css,
      -- persistence
      selda,
      selda-sqlite
